--- a/learnings-from-layoff.html
+++ b/learnings-from-layoff.html
@@ -13,13 +13,13 @@
 
         <meta name="author" content="I-Kang Ding" />
         <meta name="keywords" content="career" />
-        <meta name="description" content="I was laid off on October 17, 2012, exactly ten years ago from today. Here is what the experience of being laid-off has taught me about career development." />
+        <meta name="description" content="On this 10-year anniversary of my layoff from my first industry job, I was finally able to share this deeply personal story, and what I learned from that experience." />
 
         <meta property="og:site_name" content="I-Kang's Notes" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="What I learned from being laid off"/>
         <meta property="og:url" content="https://ikding.github.io/learnings-from-layoff.html"/>
-        <meta property="og:description" content="I was laid off on October 17, 2012, exactly ten years ago from today. Here is what the experience of being laid-off has taught me about career development."/>
+        <meta property="og:description" content="On this 10-year anniversary of my layoff from my first industry job, I was finally able to share this deeply personal story, and what I learned from that experience."/>
         <meta property="article:published_time" content="2022-10-17" />
             <meta property="article:section" content="career" />
             <meta property="article:tag" content="career" />
